Update rendered blog files

--- a/index.qmd
+++ b/index.qmd
@@ -3,9 +3,8 @@ title: "Algo-Bytes"
 ---
 
 Welcome to my blog!  
-
-### Latest Post:  
-[My First Blog Post](/posts/my-first-blog.html)  
+[My First Blog Post]
+(/posts/my-first-blog.html)  
 *Published on July 19, 2025*  
 
 "Hello readers"
